[package]
name = "hill-climbing-algorithm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
petgraph = "0.6.3"

[dependencies.bevy]
version = "0.10.1"
optional = true

[dependencies.bevy_egui]
version = "0.20.3"
optional = true

[features]
bevy = ["dep:bevy", "dep:bevy_egui"]

[[bin]]
name="hill-climbing"
path="src/main.rs"

[[bin]]
name="part1"
path="src/part1.rs"

[[bin]]
name="part2"
path="src/part2.rs"
