[package]
name = "day_14"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
pancurses = "0.17.0"
linked_hash_set = "0.1.4"
tokio = { version = "1.28.2", features = [ "full" ] }
async-trait = "0.1.68"
rayon = "1.7.0"

[[bin]]
name = "part1"
path = "src/part1.rs"

[[bin]]
name = "part2"
path = "src/part2.rs"
