[package]
name = "day_3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "rucksack_priorities"
path = "src/rucksack_priorities.rs"

[[bin]]
name = "safety_badges"
path = "src/safety_badges.rs"
