[package]
name = "day_5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.8.4"
lazy_static = "1.4.0"
itertools = "0.10.5"

[[bin]]
name = "top"
path = "src/top.rs"

[[bin]]
name = "in_order"
path = "src/in_order.rs"
