[package]
name = "day_7"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.3"

[[bin]]
name = "total_smalls"
path = "src/total_smalls.rs"

[[bin]]
name = "smallest_large"
path = "src/smallest_large.rs"
