[package]
name = "day_9"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"]}
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
pretty_env_logger = "0.5.0"
regex = "1.8.4"
linked_hash_set = "0.1.4"

[[bin]]
name="part_1"
path="src/part_1.rs"

[[bin]]
name="part_2"
path="src/part_2.rs"
